[package]
name = "citrea-stf"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true, optional = true }
# will be needed after we update the storage system
# tokio = { workspace = true, features = ["sync"], optional = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

sov-accounts = { path = "../sovereign-sdk/module-system/module-implementations/sov-accounts", default-features = false }
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-stf-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
sov-state = { path = "../sovereign-sdk/module-system/sov-state" }
sov-stf-runner = { path = "../sovereign-sdk/full-node/sov-stf-runner" }

citrea-evm = { path = "../evm" }
soft-confirmation-rule-enforcer = { path = "../soft-confirmation-rule-enforcer" }

[dev-dependencies]
# citrea-stf = { path = ".", features = ["native"] }
# tempfile = { workspace = true }
# rand = { workspace = true }
# sov-data-generators = { path = "../sovereign-sdk/module-system/utils/sov-data-generators" }
# sov-mock-zkvm = { path = "../sovereign-sdk/adapters/mock-zkvm" }
# sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = [
#     "test-utils",
# ] }

[features]
default = []
native = [
  "sov-stf-runner/native",
  "sov-accounts/native",
  "sov-modules-api/native",
  "sov-rollup-interface/native",
  "sov-modules-stf-blueprint/native",
  "soft-confirmation-rule-enforcer/native",
  "citrea-evm/native",
  "clap",
  "serde",
  "serde_json",
  "jsonrpsee",
  "tracing",
  # "tokio",
]
serde = [
  "sov-accounts/serde",
  "citrea-evm/serde",
  "soft-confirmation-rule-enforcer/serde",
]
