[package]
name = "citrea-common"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
publish = false
resolver = "2"

[dependencies]
# 3rd-party deps
anyhow = { workspace = true }
backoff = { workspace = true }
hyper = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
lru = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

# Sov SDK deps
sov-db = { path = "../sovereign-sdk/full-node/db/sov-db" }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

# Citrea
citrea-primitives = { path = "../primitives/" }
