[package]
name = "ef-tests"
version.workspace = true
description = "EF testing support for reth."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
ef-tests = []
asm-keccak = ["reth-primitives/asm-keccak"]

[dependencies]
# Reth Dependencies
reth-primitives.workspace = true
reth-db = { workspace = true, features = ["mdbx", "test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-stages.workspace = true
reth-interfaces.workspace = true
reth-revm.workspace = true

# Local dependencies
citrea-evm = { path = "../evm" }

# 3rd-party
alloy-rlp.workspace = true
tokio = "1.28.1"
walkdir = "2.3.3"
serde = "1.0.163"
serde_json.workspace = true
thiserror.workspace = true
rayon.workspace = true
