[package]
name = "ethereum-rpc"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
citrea-evm = { path = "../evm" }
sequencer-client = { path = "../sequencer-client" }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
rustc_version_runtime = { workspace = true }

borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }
reth-rpc-types-compat = { workspace = true }
reth-rpc = { workspace = true }

ethers = { workspace = true }
tokio = { workspace = true }
schnellru = "0.2.1"

sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface", features = [
    "native",
] }

sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }


[features]
default = ["local"]
local = []
native = ["citrea-evm/native"]
