[package]
name = "ethereum-rpc"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
publish = false
readme = "README.md"
resolver = "2"

[dependencies]
# 3rd-party dependencies
anyhow = { workspace = true }
borsh = { workspace = true }
citrea-evm = { path = "../evm", features = ["native"] }
citrea-primitives = { path = "../primitives" }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
parking_lot = { workspace = true }
rustc_version_runtime = { workspace = true }
schnellru = "0.2.1"
sequencer-client = { path = "../sequencer-client" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Reth deps
reth-primitives = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-rpc-types = { workspace = true }
reth-rpc-types-compat = { workspace = true }

# Sovereign-SDK deps
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface", features = ["native"] }
sov-db = { path = "../../crates/sovereign-sdk/full-node/db/sov-db" }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }

[features]
default = ["local"]
local = []
