[package]
name = "citrea-evm"
description = "EVM Module of Citrea"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false

[dependencies]
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false, features = [
    "macros",
] }
sov-state = { path = "../sovereign-sdk/module-system/sov-state" }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", optional = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
borsh = { workspace = true, features = ["rc"] }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = [
    "macros",
    "client-core",
    "server",
], optional = true }
tracing = { workspace = true, optional = true }


ethereum-types = { workspace = true, optional = true }
ethers-core = { workspace = true, optional = true }
ethers-contract = { workspace = true, optional = true }
ethers-middleware = { workspace = true, optional = true }
ethers-signers = { workspace = true, optional = true }
ethers = { workspace = true, optional = true }

alloy-primitives = { workspace = true, features = ["rand", "rlp", "serde"] }
alloy-sol-types = { workspace = true, optional = true }
alloy-rlp = { workspace = true, optional = true }
revm = { workspace = true }
reth-primitives = { workspace = true, default-features = false }
reth-interfaces = { workspace = true, optional = true }
reth-rpc-types = { workspace = true, optional = true }
reth-rpc-types-compat = { workspace = true, optional = true }
reth-rpc = { workspace = true, optional = true }
revm-inspectors = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }
itertools = { version = "0.11.0", optional = true }

[dev-dependencies]
revm = { workspace = true, features = [
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
tempfile = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = [
    "test-utils",
] }
lazy_static = "1.4.0"
walkdir = "2.3.3"
reth-db = { workspace = true }
reth-provider = { workspace = true }
reth-stages = { workspace = true }
rayon = { workspace = true }


[features]
default = []
native = [
    "sov-state/native",
    "sov-modules-api/native",

    "reth-interfaces",
    "reth-rpc-types",
    "reth-rpc-types-compat",
    "revm-inspectors",
    "reth-rpc",
    "alloy-sol-types",
    "alloy-rlp",

    "jsonrpsee",
    "schemars",
    "clap",
    "itertools",
    "serde_json",
    "secp256k1",
    "dep:tracing",
]
serde = []
smart_contracts = [
    "native",

    "ethereum-types",
    "ethers-core",
    "ethers-contract",
    "ethers-signers",
    "ethers",

    "serde_json",
]
