[package]
name = "citrea-evm"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "EVM Module of Citrea"

version = { workspace = true }
publish = false
readme = "README.md"

[dependencies]
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false, features = ["macros"] }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", optional = true }
sov-state = { path = "../sovereign-sdk/module-system/sov-state" }

anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
clap = { workspace = true, optional = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

ethereum-types = { workspace = true, optional = true }
ethers = { workspace = true, optional = true }
ethers-contract = { workspace = true, optional = true }
ethers-core = { workspace = true, optional = true }
ethers-middleware = { workspace = true, optional = true }
ethers-signers = { workspace = true, optional = true }

alloy-primitives = { workspace = true, features = ["rand", "rlp", "serde"] }
alloy-rlp = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
reth-interfaces = { workspace = true, optional = true }
reth-primitives = { workspace = true, default-features = false }
reth-rpc = { workspace = true, optional = true }
reth-rpc-types = { workspace = true, optional = true }
reth-rpc-types-compat = { workspace = true, optional = true }
revm = { workspace = true }
revm-inspectors = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }

[dev-dependencies]
bytes = { workspace = true }
lazy_static = "1.5.0"
rand = { workspace = true }
rayon = { workspace = true }
reth-db = { workspace = true }
reth-provider = { workspace = true }
revm = { workspace = true, features = ["optional_block_gas_limit", "optional_eip3607", "optional_no_base_fee"] }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = ["test-utils"] }
tempfile = { workspace = true }
walkdir = "2.3.3"

[features]
default = []
native = [
  "sov-state/native",
  "sov-modules-api/native",

  "reth-interfaces",
  "reth-rpc-types",
  "reth-rpc-types-compat",
  "revm-inspectors",
  "reth-rpc",
  "alloy-sol-types",
  "alloy-rlp",

  "jsonrpsee",
  "schemars",
  "clap",
  "itertools",
  "serde_json",
  "secp256k1",
  "dep:tracing",
]
serde = []
smart_contracts = [
  "native",

  "ethereum-types",
  "ethers-core",
  "ethers-contract",
  "ethers-signers",
  "ethers",

  "serde_json",
]
