[package]
name = "citrea-evm"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "EVM Module of Citrea"

version = { workspace = true }
publish = false
readme = "README.md"

[dependencies]
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false, features = ["macros"] }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", optional = true }
sov-state = { path = "../sovereign-sdk/module-system/sov-state" }

citrea-primitives = { path = "../primitives" }

anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
clap = { workspace = true, optional = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-network = { version = "0.4.2", default-features = false }
alloy-primitives = { workspace = true, features = ["rand", "serde"] }
alloy-rlp = { workspace = true, optional = true }
alloy-rpc-types = { workspace = true, optional = true }
alloy-rpc-types-trace = { workspace = true, optional = true }
alloy-serde = { version = "0.4.2", default-features = false }
alloy-sol-types = { workspace = true }
itertools = { workspace = true, optional = true }
reth-primitives = { workspace = true, default-features = false }
reth-provider = { workspace = true, optional = true }
reth-rpc-eth-types = { workspace = true, optional = true }
reth-rpc-eth-api = { workspace = true, optional = true }
reth-rpc-server-types = { workspace = true, optional = true }
reth-rpc-types-compat = { workspace = true, optional = true }
revm = { workspace = true }
revm-inspectors = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["consensus", "providers", "signers", "signer-local"] }
bcs = { workspace = true }
bytes = { workspace = true }
lazy_static = "1.4.0"
rand = { workspace = true }
rayon = { workspace = true }
reth-chainspec = { workspace = true }
reth-db = { workspace = true }
reth-errors = { workspace = true }
revm = { workspace = true, features = ["optional_block_gas_limit", "optional_eip3607", "optional_no_base_fee"] }
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", features = ["macros"] }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = ["test-utils"] }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface", features = ["testing"] }
sov-stf-runner = { path = "../sovereign-sdk/full-node/sov-stf-runner", features = ["native"] }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2.3.3"

[features]
default = []
native = [
  "sov-state/native",
  "sov-modules-api/native",

  "alloy-rpc-types",
  "alloy-rpc-types-trace",
  "reth-rpc-eth-types",
  "reth-rpc-eth-api",
  "reth-rpc-server-types",
  "reth-rpc-types-compat",
  "revm-inspectors",
  "reth-provider",
  "alloy-rlp",

  "jsonrpsee",
  "schemars",
  "clap",
  "itertools",
  "serde_json",
  "secp256k1",
  "dep:tracing",
]
serde = []
