[package]
name = "citrea-fullnode"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
# Citrea Deps
citrea-common = { path = "../common" }
citrea-primitives = { path = "../primitives", features = ["native"] }
sequencer-client = { path = "../sequencer-client" }

# Sov SDK deps
sov-db = { path = "../sovereign-sdk/full-node/db/sov-db" }
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-rollup-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-rollup-blueprint" }
sov-modules-stf-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-stf-blueprint", features = ["native"] }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
sov-stf-runner = { path = "../sovereign-sdk/full-node/sov-stf-runner" }

# 3rd-party deps
anyhow = { workspace = true }
backoff = { workspace = true }
borsh = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
rand = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
tempfile = { workspace = true }

sov-mock-da = { path = "../sovereign-sdk/adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../sovereign-sdk/adapters/mock-zkvm" }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = ["test-utils"] }
sov-state = { path = "../sovereign-sdk/module-system/sov-state", features = ["native"] }
