[package]
name = "citrea-primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
# Sov SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

# 3rd-party deps
alloy-eips = { workspace = true }
anyhow = { workspace = true }
reth-primitives = { workspace = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
# Sov SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface", features = ["testing"] }

[features]
native = [
  "dep:serde",
  "dep:tokio",
  "dep:tracing",
  "sov-rollup-interface/native",
]
