[package]
name = "citrea-primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
# Sov SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

# 3rd-party deps
alloy-eips = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
# Sov SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface", features = ["testing"] }

[features]
native = [
  "dep:serde",
  "dep:tokio",
  "dep:tracing",
  "sov-rollup-interface/native",
]
