[package]
name = "citrea-primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
# Sov SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

# 3rd-party deps
alloy-eips = { workspace = true }

[dev-dependencies]
# Sov SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface", features = ["testing"] }

[features]
native = [
  "sov-rollup-interface/native",
]
