[package]
name = "citrea-risc0-bonsai-adapter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
description = "An adapter allowing Citrea to connect with Bonsai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
borsh = { workspace = true }
bytemuck = "1.13.1"
hex = { workspace = true }
once_cell = { version = "1.19.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
risc0-circuit-rv32im = { workspace = true, optional = true }
risc0-zkp = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
risc0-zkvm-platform = { workspace = true }
serde = { workspace = true }
sov-db = { path = "../sovereign-sdk/full-node/db/sov-db" }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
tracing = { workspace = true }

# we are going to use its guest
sov-risc0-adapter = { path = "../sovereign-sdk/adapters/risc0", optional = true }

[features]
default = []
native = [
  "risc0-zkvm/prove",
  "dep:risc0-zkp",
  "dep:risc0-circuit-rv32im",
  "sov-risc0-adapter/native",
]
bench = ["once_cell", "parking_lot", "native"]
