[package]
name = "citrea-risc0-bonsai-adapter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
description = "An adapter allowing Citrea to connect with Bonsai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
serde = { workspace = true }
sov-db = { path = "../sovereign-sdk/full-node/db/sov-db" }
sov-risc0-adapter = { path = "../sovereign-sdk/adapters/risc0", optional = true }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
tracing = { workspace = true }

[features]
default = []
native = [
  "risc0-zkvm/prove",
  "sov-risc0-adapter/native",
]
bench = ["native"]
