[package]
name = "sequencer-client"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
publish = false
readme = "README.md"
resolver = "2"

[dependencies]
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
tracing = { workspace = true }

citrea-evm = { path = "../evm" }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

ethers = { workspace = true }
tokio = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
local = []
native = ["sov-rollup-interface/native"]
