[package]
name = "sequencer-client"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
publish = false
readme = "README.md"
resolver = "2"

[dependencies]
# 3rd-party dependencies
anyhow = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Reth Deps
alloy-rpc-types = { workspace = true }
alloy-primitives = { workspace = true }

# Sovereign-SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

# Citrea Deps
citrea-primitives = { path = "../primitives" }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
local = []
native = ["sov-rollup-interface/native"]
